--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^1.0.6",
     "axios": "^1.7.7",
     "chart.js": "^4.4.5",
+    "hume": "^0.9.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
@@ -27,6 +28,7 @@
     "globals": "^15.9.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
+    "typescript": "^5.6.3",
     "vite": "^5.4.8"
   }
 }
