--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@cartesia/cartesia-js": "^1.1.0",
     "@heroicons/react": "^1.0.6",
     "axios": "^1.7.7",
     "chart.js": "^4.4.5",
